Apply suggestions from code review
Co-authored-by: julianladisch <533612+julianladisch@users.noreply.github.com>